# Pi-Maintainer

./: Cargo.toml  PiMainteno.toml  README.md  codex.md  upload_service.sh
cache/: db  snap.0000000000001AD8  snap.0000000000004869  snap.0000000000005ACD
frontend/: Cargo.toml  index.html  package-lock.json  package.json  trunk.toml
frontend/src/: lib.rs
src/: cache.rs  codex_client.rs  config.rs  main.rs  patcher.rs  scheduler.rs  summarizer.rs  systemd_monitor.rs  web_server.rs
